# Hotel-Recommendation-System

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/utility/: field.py
booking/: admin.py  forms.py  models.py  urls.py  views.py
booking/management/commands/: generate_sample_data.py
booking/services/: recommendation.py
hotel_booking_recommendation/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
static/css/: slider.css
static/image/: bangalore.avif  delhi.avif  hydrabad.avif  jaipur.avif  mumbai.avif
static/js/: indian-cities.js
templates/accounts/: login.html  preferences.html  register.html
templates/accounts/layouts/: base.html  header.html
templates/booking/: booking_create.html  booking_detail.html  booking_history.html  hotel_detail.html  hotel_list.html  hotel_search.html
templates/booking/layouts/: base.html  footer.html  header.html
templates/booking/partials/: hotel_card.html
templates/layouts/: base.html
